# workout_fastapi

./: README.md  alembic.ini  pyproject.toml  requirements.txt  scripts.py  serve.py
alembic/: env.py
alembic/versions/: 1692df96a830_init_db.py  88a64aa830f5_init_db.py
fastapi_python/: __init__.py  main.py  routers.py
fastapi_python/atleta/: controller.py  models.py  schemas.py
fastapi_python/categoria/: controller.py  models.py  schemas.py
fastapi_python/centro_treinamento/: controller.py  models.py  schemas.py
fastapi_python/config/: database.py  settings.py
fastapi_python/contrib/: dependencies.py  models.py  schemas.py
fastapi_python/contrib/repository/: models.py
